--- a/src/components/Team.astro
+++ b/src/components/Team.astro
@@ -1,7 +1,7 @@
 ---
 const teams = [
   {
-    name: 'Esteban González Villanueva',
+    name: 'Esteban Matheu Gamboa',
     description: 'Business Administrator Expert',
     image: '/assets/team/team-01.png',
     facebookLink: '#',
