--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,11 +21,10 @@ import Blogsection from '../components/Blogsection.astro';
   <Features />
   <About />
   <CTA />
-  <Pricing />
-  <Testimonials />
-  <Faq />
+  <!--  <Testimonials /> -->
+  <!--  <Faq /> -->
   <Team />
-  <Blogsection />
+  <!--  <Blogsection /> -->
   <Contact />
-  <Clients />
+  <!--  <Clients /> -->
 </Layout>
