--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -1,19 +1,19 @@
 ---
 const features = [
   {
-    icon: 'assets/features/icon-03.svg',
+    icon: 'assets/services/CustomDevelopment.svg',
     title: 'Custom Development',
     description:
       'Customized development spans a multitude of fronts, including web, mobile applications, and desktop software. Our expertise lies in transforming your unique ideas into exceptional digital solutions.',
   },
   {
-    icon: 'assets/features/icon-02.svg',
+    icon: 'assets/services/BusinessIA.svg',
     title: 'Artificial Intelligence',
     description:
       'From predictive analytics to the implementation of intelligent enterprise chatbots, we are here to empower your business with innovative solutions that enhance efficiency and interaction at every level.',
   },
   {
-    icon: 'assets/features/icon-03.svg',
+    icon: 'assets/services/ML.svg',
     title: 'Business Intelligence',
     description:
       'Empower strategic decision-making with our Business Intelligence service. We provide advanced data analysis and impactful visualizations to help your company reach new levels of efficiency and success.',
