Cambios 15 de febrero

--- a/src/components/Team.astro
+++ b/src/components/Team.astro
@@ -39,15 +39,14 @@ const teams = [
     <div class="-mx-4 flex flex-wrap">
       <div class="w-full px-4">
         <div class="mx-auto mb-[60px] max-w-[485px] text-center">
-          <span class="mb-2 block text-lg font-semibold text-primary"> Our Team Members</span>
+          <span class="mb-2 block text-lg font-semibold text-primary">Meet Our Team</span>
           <h2
             class="mb-3 text-3xl font-bold leading-[1.2] text-dark dark:text-white sm:text-4xl md:text-[40px]"
           >
-            Our Creative Team
+            The Creative Minds Behind Us
           </h2>
           <p class="text-base text-body-color dark:text-dark-6">
-            There are many variations of passages of Lorem Ipsum available but the majority have
-            suffered alteration in some form.
+            Explore the diverse talents within our team.
           </p>
         </div>
       </div>
