--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -1,51 +1,36 @@
 ---
 const features = [
   {
-
     icon: 'assets/features/icon-03.svg',
     title: 'Custom Development',
-    ref: 'javascript:void(0)',
-    refTitle: 'Learn More',
     description:
       'Customized development spans a multitude of fronts, including web, mobile applications, and desktop software. Our expertise lies in transforming your unique ideas into exceptional digital solutions.',
   },
   {
     icon: 'assets/features/icon-02.svg',
     title: 'Artificial Intelligence',
-    ref: 'javascript:void(0)',
-    refTitle: 'Learn More',
     description:
       'From predictive analytics to the implementation of intelligent enterprise chatbots, we are here to empower your business with innovative solutions that enhance efficiency and interaction at every level.',
   },
   {
     icon: 'assets/features/icon-03.svg',
     title: 'Business Intelligence',
-    ref: 'javascript:void(0)',
-    refTitle: 'Learn More',
     description:
       'Empower strategic decision-making with our Business Intelligence service. We provide advanced data analysis and impactful visualizations to help your company reach new levels of efficiency and success.',
   },
-  // {
-  //   icon: 'assets/features/icon-04.svg',
-  //   title: 'All Essential Elements',
-  //   ref: 'javascript:void(0)',
-  //   refTitle: 'Learn More',
-  //   description:
-  //     'Lorem Ipsum is simply dummy text of the printing and industry.',
-  // },
 ];
 ---
 
 <!-- ====== Services Section Start -->
-<section id="services" class="pt-20 pb-8 lg:pt-[120px] lg:pb-[70px] dark:bg-dark">
+<section id="services" class="pb-8 pt-20 dark:bg-dark lg:pb-[70px] lg:pt-[120px]">
   <div class="container">
     <div class="-mx-4 flex flex-wrap">
       <div class="w-full px-4">
-        <div class="mb-12 mx-auto max-w-[485px] lg:mb-[70px] text-center">
-          <span class="mb-2 block text-lg font-semibold text-primary">
-            Services
-          </span>
-          <h2 class="mb-3 text-3xl font-bold text-dark dark:text-white sm:text-4xl md:text-[40px] md:leading-[1.2]">
+        <div class="mx-auto mb-12 max-w-[485px] text-center lg:mb-[70px]">
+          <span class="mb-2 block text-lg font-semibold text-primary"> Services</span>
+          <h2
+            class="mb-3 text-3xl font-bold text-dark dark:text-white sm:text-4xl md:text-[40px] md:leading-[1.2]"
+          >
             Main Services
           </h2>
           <p class="text-base text-body-color dark:text-dark-6">
@@ -57,28 +42,14 @@ const features = [
     <div class="-mx-4 flex flex-wrap">
       {
         features.map((feature) => (
-          <div class="w-full px-4 md:w-1/1 lg:w-1/3">
+          <div class="md:w-1/1 w-full px-4 lg:w-1/3">
             <div class="wow fadeInUp group mb-12" data-wow-delay=".1s">
-              <div
-                class="relative z-10 mb-10 flex h-[70px] w-[70px] items-center justify-center rounded-[14px] bg-primary"
-              >
-                <span
-                  class="absolute top-0 left-0 -z-[1] mb-8 flex h-[70px] w-[70px] rotate-[25deg] items-center justify-center rounded-[14px] bg-primary bg-opacity-20 duration-300 group-hover:rotate-45"
-                ></span>
+              <div class="relative z-10 mb-10 flex h-[70px] w-[70px] items-center justify-center rounded-[14px] bg-primary">
+                <span class="absolute left-0 top-0 -z-[1] mb-8 flex h-[70px] w-[70px] rotate-[25deg] items-center justify-center rounded-[14px] bg-primary bg-opacity-20 duration-300 group-hover:rotate-45" />
                 <img src={feature.icon} alt="icon" />
               </div>
-              <h4 class="mb-3 text-xl font-bold text-dark dark:text-white">
-                {feature.title}
-              </h4>
-              <p class="mb-8 text-body-color dark:text-dark-6 lg:mb-9">
-                {feature.description}
-              </p>
-              <a
-                href={feature.ref}
-                class="text-base font-medium text-dark dark:text-white hover:text-primary dark:hover:text-primary"
-              >
-                {feature.refTitle}
-              </a>
+              <h4 class="mb-3 text-xl font-bold text-dark dark:text-white">{feature.title}</h4>
+              <p class="mb-8 text-body-color dark:text-dark-6 lg:mb-9">{feature.description}</p>
             </div>
           </div>
         ))
