--- a/src/components/Contactsection.astro
+++ b/src/components/Contactsection.astro
@@ -1,3 +1,51 @@
+---
+import {sendEmail} from '../scripts/nodemailer';
+
+export const prerender = true;
+
+if (Astro.request.method === "POST") {
+  console.log("Entra metoodo")
+  try {
+     // Getting posted data from our contact form
+   
+
+    const data = await Astro.request.formData();
+    const name = data.get("fullName");
+    const email = data.get("email");
+    const phone = data.get("phone");
+    const message = data.get("message");
+
+
+       const payload = {
+      name: name,
+      email: email,
+      message: message,
+      phone:phone,
+
+      };
+
+    await sendEmail({
+        email: "daadevcr@gmail.com",
+        html: `<p>${JSON.stringify(payload)}</p>`,
+        subject: "Nuevo cliente pagina ERASOFT",
+        text: "NUEVO ERASOFT MENSAJE",
+      }).then(() => {
+      console.log('Email sent')
+    }).catch((error) => {
+      console.error(error)
+    });
+
+
+
+}catch(e){
+  console.error(e)
+}
+
+
+}
+
+---
+
 <!-- ====== Contact Start ====== -->
 <section id="contact" class="relative py-20 md:py-[120px]">
   <div class="absolute left-0 top-0 -z-[1] h-full w-full dark:bg-dark"></div>
@@ -67,7 +115,7 @@
           >
             Send us a Message
           </h3>
-          <form>
+          <form method="POST">
             <div class="mb-[22px]">
               <label for="fullName" class="mb-4 block text-sm text-body-color dark:text-dark-6"
                 >Full Name*</label
