--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -21,45 +21,41 @@ const footerLinks = [
         isExternal: false,
       },
       {
-        name: 'Features',
-        href: '/',
+        name: 'Services',
+        href: '/#services',
         isExternal: false,
       },
       {
         name: 'About',
-        href: '/',
+        href: '/#about',
         isExternal: false,
       },
       {
-        name: 'Testimonial',
-        href: '/',
+        name: 'Contact',
+        href: '/#contact',
         isExternal: false,
       },
     ],
   },
   {
-    header: 'Features',
+    header: 'Services',
     links: [
       {
-        name: 'How it works',
-        href: '/',
+        name: 'Custom Development',
+         href: '/#services',
         isExternal: false,
       },
       {
-        name: 'Privacy policy',
-        href: '/',
+        name: 'Artificial Intelligence',
+         href: '/#services',
         isExternal: false,
       },
       {
-        name: 'Terms of Service',
-        href: '/',
+        name: 'Business Intelligence',
+         href: '/#services',
         isExternal: false,
       },
-      {
-        name: 'Refund policy',
-        href: '/',
-        isExternal: false,
-      },
+    
     ],
   },
   {
