--- a/src/components/Contactsection.astro
+++ b/src/components/Contactsection.astro
@@ -1,8 +1,7 @@
 ---
 import { sendEmail } from '../scripts/nodemailer';
 
-export const prerender = true;
-
+export const prerender = false;
 
 
 if (Astro.request.method === 'POST') {
