--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -16,7 +16,7 @@ const features = [
     icon: 'assets/services/ML.svg',
     title: 'Business Intelligence',
     description:
-      'Empower strategic decision-making with our Business Intelligence service. We provide advanced data analysis and impactful visualizations to help your company reach new levels of efficiency and success.',
+      'We provide advanced data analysis and impactful visualizations to help your company reach new levels of efficiency and success. Empower strategic decision-making with our Business Intelligence service.',
   },
 ];
 ---
